[type]:   fix [module]: listview [id]:     # [desc]:   Added an additional CSS class on the ListView wrap  named .x-list-wrap. Added a CSS rule to set the overflow to auto to allow scrollbars to appear when the ListView overflows its container.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4785 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/structure/list-view.css
+++ b/resources/css/structure/list-view.css
@@ -77,3 +77,7 @@
     border-width: 0 1px 1px;
     padding-bottom:3px;
 }
+
+.x-list-wrap {
+    overflow: auto;
+}
